# rust-graphql-xml

./: Cargo.toml  README.md  data.xml
src/: graphql_schema.rs  lib.rs  main.rs  schema.rs  xml_schema.rs
