[package]
name = "rust-graphql-xml"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.13"
async-graphql-warp = "7.0.13"
bytes = "1.9.0"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.7"
yaserde = "0.12.0"
yaserde_derive = "0.12.0"
